# bpy_mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.serena/: project.yml
scripts/: setup.sh  start-server-direct.sh  start-server.sh  update-index.sh
src/: __init__.py  cache.py  indexer.py  parser.py  server.py  utils.py
